[package]
name = "Main"
version = "0.1.0"
authors = ["Will Koster <jameswk2@illinois.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"

[[bench]]
name = "same_necklace_bench"
harness = false
path = "src/main.rs"

